--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "styled-components": "^5"
   },
   "dependencies": {
+    "leaflet": "^1.8.0",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
+    "react-leaflet": "^4.0.1",
     "styled-components": "^5.3.5"
   }
 }
